Bug Fix - Intro Section Footer Alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,10 @@ header h1 {
 }
 
 /* Intro prompt section */
+#intro-section {
+  margin-bottom: 5vh;
+}
+
 #intro-section h1 {
   font-weight: 100;
   font-size: 5vh;
